<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginRoot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg_image"
    android:orientation="vertical" >

	<LinearLayout
	    android:id="@+id/LinearLayout01"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="1.0"
	   
	    android:orientation="vertical" >
	    <RelativeLayout
	        android:id="@+id/RelativeLayout02"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15.0px"
	        android:layout_marginRight="15.0px"
	        android:layout_marginTop="200dp"
	        android:padding="10dp"
	        android:paddingBottom="10.0px"
	        android:paddingTop="21.0px" >

	        <EditText
	            android:id="@+id/login_edit_account"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"
	            android:layout_marginBottom="5.0px"
	            android:layout_marginLeft="5.0dip"
	            android:layout_marginRight="5.0dip"
	            android:layout_marginTop="5.0dip"
	            android:background="@drawable/edit_login"
	            android:hint="@string/strInputAccHint"
	            android:inputType="none"
	            android:maxLength="30"
	            android:paddingLeft="45.0sp"
	            android:saveEnabled="true" />

	        <TextView
	            android:id="@+id/TextView01"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBottom="@+id/login_edit_account"
	            android:layout_alignLeft="@+id/login_edit_account"
	            android:layout_alignTop="@+id/login_edit_account"
	            android:layout_marginRight="15.0sp"
	            android:gravity="center_vertical"
	            android:paddingLeft="7.0sp"
	            android:text="@string/strAccInputLabel"
	            android:textColor="#ff3f3f3f"
	            android:textSize="16.0dip" />

	        <EditText
	            android:id="@+id/login_edit_pwd"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/login_edit_account"
	            android:layout_alignRight="@+id/login_edit_account"
	            android:layout_below="@+id/login_edit_account"
	            android:layout_marginRight="1.0dip"
	            android:background="@drawable/edit_login"
	            android:inputType="textPassword"
	            android:maxLength="30"
	            android:paddingLeft="45.0sp"
	            android:saveEnabled="true" />

	        <TextView
	            android:id="@+id/TextView02"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBottom="@+id/login_edit_pwd"
	            android:layout_alignRight="@+id/TextView01"
	            android:layout_alignTop="@+id/login_edit_pwd"
	            android:gravity="center_vertical"
	            android:paddingLeft="7.0sp"
	            android:text="@string/strPswInputLabel"
	            android:textColor="#ff3f3f3f"
	            android:textSize="16.0dip" />

	        <Button
	            android:id="@+id/login_btn_login"
	            android:layout_width="wrap_content"
	            android:layout_height="45dp"
	            android:layout_alignLeft="@+id/login_edit_pwd"
	            android:layout_alignRight="@+id/login_edit_pwd"
	            android:layout_below="@+id/login_edit_pwd"
	            android:layout_marginTop="20dp"
	            android:background="@drawable/btn_long"
	            android:onClick="saveAccountPwd"
	            android:text="登录"
	            android:textColor="@color/white" />

	        <Button
	            android:id="@+id/btn_set"
	            android:layout_width="wrap_content"
	            android:layout_height="45dp"
	            android:layout_alignLeft="@+id/login_btn_login"
	            android:layout_alignRight="@+id/login_btn_login"
	            android:layout_below="@+id/login_btn_login"
	            android:layout_marginTop="5dp"
	            android:background="@drawable/btn_long2"
	            android:onClick="setServerIp"
	            android:text="设置" 
	            android:textColor="@color/white"/>

	        <CheckBox
	            android:id="@+id/login_cb_savepwd"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/login_edit_pwd"
	            android:layout_alignBottom="@+id/login_edit_pwd"
	            android:layout_alignRight="@+id/login_edit_pwd"
	            android:layout_marginRight="15dp"
	            android:button="@drawable/btn_check"
	            android:checked="true"
	            android:text="@string/opt_remember"
	            android:textColor="#ff222222"
	            android:textSize="16.0sp" />

	    </RelativeLayout>

	    

	</LinearLayout>

	<TextView
	    android:id="@+id/btn_register"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="10.0dip"
	    android:clickable="true"
	    android:gravity="center"
	    android:linksClickable="true"
	    android:onClick="userRegister"
	    android:text="没有账号？请注册"
	    android:textColor="@color/white"
	    android:textSize="16.0sp" />

</LinearLayout>
